# llmgate

./: .dockerignore  .env.example  .gitignore  .golangci.yml  CLAUDE.md  Dockerfile  Makefile  README.md  SECURITY.md  compose.yaml  docker-compose.yaml  go.mod  go.sum  manifest.yaml  pr-body.md
docs/: config.md  (+8 more)
tests/e2e/: cassette.py  conftest.py  pyproject.toml  test_all_models.py  test_chat.py  test_health.py
tests/e2e/fixtures/models/deepseek-v4-flash/: chat-completion.json  chat-completion.sse
tests/e2e/fixtures/models/deepseek-v4-pro/: chat-completion.json  chat-completion.sse
tests/e2e/fixtures/models/glm-5/: chat-completion.json  chat-completion.sse
tests/e2e/fixtures/models/glm-5.1/: chat-completion.json  chat-completion.sse
tests/e2e/fixtures/models/hy3-preview/: chat-completion.json  chat-completion.sse
tests/e2e/fixtures/models/kimi-k2.5/: chat-completion.json  chat-completion.sse
tests/e2e/fixtures/models/kimi-k2.6/: chat-completion.json  chat-completion.sse
tests/e2e/fixtures/models/kimi-k2.7-code/: chat-completion.json  chat-completion.sse
tests/e2e/fixtures/models/mimo-v2-omni/: chat-completion.json  chat-completion.sse
tests/e2e/fixtures/models/mimo-v2-pro/: chat-completion.json  chat-completion.sse
tests/e2e/fixtures/models/mimo-v2.5/: chat-completion.json  chat-completion.sse
tests/e2e/fixtures/models/mimo-v2.5-pro/: chat-completion.json  chat-completion.sse
tests/e2e/fixtures/models/minimax-m2.5/: chat-completion.json  chat-completion.sse
tests/e2e/fixtures/models/minimax-m2.7/: chat-completion.json  chat-completion.sse
(+461 files in other folders)
