[project]
name = "llmgate-e2e-tests"
version = "0.0.0"
description = "E2E regression tests for llmgate"
requires-python = ">=3.11"
dependencies = [
  "pytest>=8.0",
  "pytest-timeout>=2.3",
  "openai>=1.50",
  "httpx>=0.28",
  "python-dotenv>=1.0",
]

[tool.pytest.ini_options]
testpaths = ["."]
addopts = "-v --strict-markers"
